<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_gravity="center">

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/FiltroTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Todas_Tareas"
        android:text="@string/Todas_Tareas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Tareas_Finalizadas"
        android:text="@string/Tareas_Finalizadas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Tareas_No_Finalizadas"
        android:text="@string/Tareas_No_Finalizadas"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/SpinnerWithStroke"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingStart="16dp">

        <Spinner
            android:textSize="10sp"
            android:layout_gravity="center"
            android:id="@+id/spinnerSubjects"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>